opam-version: "2.0"
name: "Genprint"
version: "0.1"
synopsis: "PPX syntax extension and library package for printing values of any type"
description: """
A PPX syntax extension and library package enabling printing of values of any type (ie. no need to install custom printers), using OCaml's internal printing facilities a la toplevel evaluation.
Useful for debugging as a quick alternative to ocamldebug.
"""

maintainer: "progman1"
authors: [ "progman1" ]
homepage: "github.com/progman1/genprintlib"
dev-repo: "git+https://github.com/progman1/genprintlib.git"
bug-reports: "progman1"
build: [
  "dune" "build" "-p" name
]
install: [
  [make "-f" "Makefile" "PREFIX=%{prefix}%" "install" ]
]
remove: [
  [make "-f" "Makefile" "PREFIX=%{prefix}%" "uninstall" ]
]
depends: [
  "ocaml" {build} # {>= "4.07.1"}
  "ppxlib"
]

