(library
; cannot have simultaneous installs [(package ...)] until >1.9.3
 (public_name genprint.ppx)
 (name ppx_genprint)
 (modules ppx_genprint)
 (wrapped true)
 (kind ppx_rewriter)
 (libraries ppxlib)
 (preprocess (pps ppxlib.metaquot))
)

(library
 (public_name genprint)
 (name genprint)
 (modules genprintval genprint)
 (libraries compiler-libs.common stdlib-shims)
)

; how incredibly ugly - to accommodate a compiler version change effecting 2 files...
(alias
 (name epoc1)
 (deps genprintval.ml-epoc1 genprintval.mli-epoc1)
 (action (progn
         (run %{bin:cp} genprintval.ml-epoc1 ../../../src/genprintval.ml )
         (run %{bin:cp} genprintval.mli-epoc1 ../../../src/genprintval.mli )
 )))

(alias
 (name epoc2)
 (deps genprintval.ml-epoc2 genprintval.mli-epoc2)
 (action (progn
         (run %{bin:cp} genprintval.ml-epoc2 ../../../src/genprintval.ml )
         (run %{bin:cp} genprintval.mli-epoc2 ../../../src/genprintval.mli )
 )))

(rule
 (targets genprintval.ml genprintval.mli)
 (deps  mkgenprintval.ml
        genprintval.ml-2 genprintval.mli-2
        genprintval.ml-3 genprintval.mli-3
        genprintval.ml-4 genprintval.mli-4
        genprintval.ml-5 genprintval.mli-5
        genprintval.ml-6 genprintval.mli-6
        genprintval.ml-7 genprintval.mli-7
        genprintval.ml-8 genprintval.mli-8
 )
 (action (run %{ocaml} unix.cma mkgenprintval.ml)))
