(library
; cannot have simultaneous installs [(package ...)] until >1.9.3
 (public_name genprint.ppx)
 (name ppx_genprint)
 (modules ppx_genprint)
 (wrapped true)
 (kind ppx_rewriter)
 (libraries ppxlib)
 (preprocess (pps ppxlib.metaquot))
)

(library
 (public_name genprint)
 (name genprint)
 (modules genprintval genprint)
 (libraries compiler-libs.common stdlib-shims)
)

(rule
 (targets genprint.ml)
 (deps genprint.cppo.ml)
 (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{deps} -o %{targets} ))
; (action (with-stdout-to %{targets} (run %{bin:cppo} -V OCAML:%{ocaml_version} %{deps} -o %{targets} )))
)

(rule
 (targets genprintval.ml genprintval.mli)
 (deps  mkgenprintval.ml
        genprintval.ml-2 genprintval.mli-2
        genprintval.ml-3 genprintval.mli-3
        genprintval.ml-4 genprintval.mli-4
        genprintval.ml-5 genprintval.mli-5
        genprintval.ml-6 genprintval.mli-6
        genprintval.ml-7 genprintval.mli-7
        genprintval.ml-8 genprintval.mli-8
 )
 (action (run %{ocaml} unix.cma mkgenprintval.ml)))
