(executable
 (name pp)
 (modules pp)
 (libraries genprint ppxlib))

(rule
 (targets pp.result)
 (deps test.ml)
 (action (run ./pp.exe --impl %{deps} -o %{targets}))
)

(alias
 (name runtest)
 (action (diff pp.expected pp.result)))

;(test
; (name test)
; (modules test)
; (preprocess (pps genprint.ppx)))

;(test
(executable
  (name test)
  (modules test)
;  (modes byte native)
  (libraries genprint)
  (preprocess (pps genprint.ppx))
)

;invocation with [dune run test] seems to work
;invoke with dune build @run
(alias
 (name run)
 (deps test.exe)
 (action (run ./test.exe))
)
