(executable
 (name pp)
 (modules pp)
 (libraries genprint ppxlib))

(rule
 (targets pp.result)
 (deps test.ml)
 (action (run ./pp.exe --impl %{deps} -o %{targets}))
)

(alias
 (name runtest)
 (action (diff pp.expected pp.result)))

(executable
  (name test)
  (modules test)
  (libraries genprint)
  (preprocess (pps genprint.ppx))
)

;invoke with dune build @run
(alias
 (name run)
 (deps test.bc)
 (action (system "CMTPATH=test/.test.eobjs/byte ./test.bc") )
)
